--- a/css/progress.css
+++ b/css/progress.css
@@ -1,5 +1,11 @@
 /* SOURCE: https://css-tricks.com/styling-cross-browser-compatible-range-inputs-css/ */
 
+:root {
+    --background: #1f1d2b;
+    --player-controls-background: #353340;
+    --color: #ceced8;
+}
+
 input[type='range'] {
 	-webkit-appearance: none; /* Hides the slider so that custom slider can be made */
 	width: 100%; /* Specific width is required for Firefox. */
@@ -27,35 +33,35 @@ input[type='range']::-ms-track {
 /* Special styling for WebKit/Blink */
 input[type='range']::-webkit-slider-thumb {
 	-webkit-appearance: none;
-	border: 1px solid #000000;
-	height: 36px;
-	width: 16px;
+	/*border: 1px solid #000000; */
+	height: 30px;
+	width: 12px;
 	border-radius: 3px;
-	background: #ffffff;
+	background: black;
 	cursor: pointer;
-	margin-top: -14px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
-	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; /* Add cool effects to your sliders! */
+	margin-top: -11px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+	/*box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;*/ /* Add cool effects to your sliders! */
 }
 
 /* All the same stuff for Firefox */
 input[type='range']::-moz-range-thumb {
-	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-	border: 1px solid #000000;
-	height: 36px;
-	width: 16px;
+	/*box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;*/
+	/*border: 1px solid #000000;*/
+	height: 30px;
+	width: 12px;
 	border-radius: 3px;
-	background: #ffffff;
+	background: black;
 	cursor: pointer;
 }
 
 /* All the same stuff for IE */
 input[type='range']::-ms-thumb {
-	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-	border: 1px solid #000000;
-	height: 36px;
-	width: 16px;
+	/*box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;*/
+	/*border: 1px solid #000000;*/
+	height: 30px;
+	width: 12px;
 	border-radius: 3px;
-	background: #ffffff;
+	background: black;
 	cursor: pointer;
 }
 
@@ -63,14 +69,14 @@ input[type='range']::-webkit-slider-runnable-track {
 	width: 100%;
 	height: 8.4px;
 	cursor: pointer;
-	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-	background: #3071a9;
+	/*box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;*/
+	background: var(--color);
 	border-radius: 1.3px;
-	border: 0.2px solid #010101;
+	/*border: 0.2px solid #010101;*/
 }
 
 input[type='range']:focus::-webkit-slider-runnable-track {
-	background: #367ebd;
+	background: var(--color);
 }
 
 input[type='range']::-moz-range-track {
